# learn

./: .gitignore  .stylish-haskell.yaml  A.hs  B.hs  C.hs  D.hs  Server.hs  index.html  stack.yaml
algo/: algo.cabal
algo/hs/Data/Vector/: BubbleSort.hs
chat/: Server.hs
cpkg/utk/cs302/lab1/cpp/: ppm-crop.cpp  ppm-prim.cpp  ppm-rotate.cpp
cpkg/utk/cs302/lab1/py/: lab1.py
cpkg/utk/cs302/lab2/cpp/: artist.cpp  io.cpp  main.cpp  misc.cpp  time.cpp
cpkg/utk/cs302/lab2/scm/: album.scm  lib_info  misc.scm  set.scm  song-info.scm  split.scm  time.scm  track.scm  utility.scm
cpkg/utk/cs302/lab3/cpp/: keno.cpp  product.cpp  product.h
cpkg/utk/cs302/lab4/cpp/: light.h  road.cpp  road.h  roadconfig.cpp  roadconfig.h
cpkg/utk/cs302/lab5/cpp/: Makefile  disk.cpp  events.cpp  main.cpp
cpkg/utk/cs302/lab5/py/: lab5.py
cpkg/utk/cs302/lab6/cpp/: Makefile  merge_sort.cpp  quick_sort.cpp  sort_driver.cpp
cpkg/utk/cs302/lab6/py/: sorts.py
cpkg/utk/cs302/lab7/cpp/: maze.cpp
cpkg/utk/cs302/lab7/scm/: graph.scm  parse.scm  read-word.scm
cpkg/utk/cs302/lab8/cpp/: Makefile  lab8.hpp  main.cpp
cpkg/utk/cs302/lab9/cpp/: Makefile  city_map.cpp  city_map.h
cpkg/utk/cs302/labA/cpp/: dice.hpp  test.sh
cpkg/utk/cs302/labA/cpp/test/: dice  dice2
cpkg/utk/cs302/labB/cpp/test/: dond.hs
cpkg/utk/cs302/labB/cpp/turn_in/: dond.cpp
cs302/lab8/: Main.hs  README
db/: NIX  db.cabal  setup.sh
dijkstra/: maze.txt
ghcjs/: Makefile  index.html  learn-ghcjs.cabal  run.sh  setup.sh  stack.yaml
graph-store/: Graph.lhs  README.md  TODO.md
haskell-tutorial/: 01-hello-world.sh  03-io-machines.sh  04-do-notation.sh  99-cleanup.sh  README.md
haskell-tutorial/demo/01-hello-world/: stack.yaml
haskell-tutorial/demo/03-io-machines/: Main.hs
haskell-tutorial/demo/04-do-notation/: package.yaml
hs/algo/hs/Data/Vector/: InsertionSort.hs
hs/arabic-script/src/: Main.hs
hs/db/: NIX  Sql.hs  package.yaml
hs/graph-store/: Graph.lhs
hs/hiccup/: Main.hs
hs/hiccup/src/: BSParse.hs  Common.hs  ExprParse.hs  RToken.hs  TclChan.hs  TclObj.hs  Util.hs
hs/hiccup/src/TclLib/: ControlProcs.hs  NSProcs.hs
hs/learn-pricing/: Main.hs  pricing.c
hs/linenoise/: package.yaml
hs/linux-debugger/: package.yaml
hs/nix/: package.yaml
hs/opaleye/: package.yaml
hs/persistent/: Dockerfile  cabal.config  install-docker.sh
hs/play-with-data-dynamic/: Main.hs  package.yaml
hs/raft/: package.yaml
hs/record/: package.yaml
hs/smash/: Main.hs  README.md  SideMain.hs  package.yaml
hs/try-alex/app/: Cat.hs  DropComments.hs
hs/try-alex/lib/TryAlex/: LexChars.x  LexLines.x
hs/try-lens/: .gitignore
hs/try-lens/app/: Main.hs
hs/try-pipes/: package.yaml
hsgl/: hsgl.cabal
hspkg/algo/: package.yaml
hspkg/arabic-script/: package.yaml
hspkg/cs302/lab8/: index.html
hspkg/dijkstra/: search.hs
hspkg/graph-store/: README.md
hspkg/hiccup/src/: EventMgr.hs  Hiccup.hs
hspkg/hiccup/src/TclLib/: IOProcs.hs  ListProcs.hs  MathProcs.hs  StringProcs.hs  UtilProcs.hs
hspkg/hsgl/: Main.hs  package.yaml
hspkg/language-bash/: package.yaml
hspkg/language-bash/src/Language/Bash/: Word.hs
hspkg/learn-pricing/: Makefile  package.yaml
hspkg/nix/: default.nix
hspkg/opaleye/: default.nix  shell.nix
hspkg/opaleye/src/: Main.hs
hspkg/persistent/: Main.hs  package.yaml
hspkg/pricing/: package.yaml
hspkg/raft/: Raft.hs
hspkg/smash/: Main.hs  README.md  package.yaml
hspkg/try-alex/: stack.yaml
hspkg/try-alex/app/: LexLua.hs
hspkg/try-pipes/: .gitignore
hspkg/try-pipes/app/: Main.hs
hstut/: 00-setup.sh  01-hello-world.sh  03-io-machines.sh  04-do-notation.sh
hstut/demo/01-hello-world/: Main.hs  package.yaml
hstut/demo/03-io-machines/: package.yaml
hstut/demo/04-do-notation/: Main.hs
lens/: E.hs  README.md  lens.cabal
linux-debugger/: Main.hs  stack.yaml
nix/: hello.cabal
nixos/: configuration.nix
opaleye/: learn-opaleye.cabal
persistent/: Geo.hs  Main.hs  README  cabal.config  learn-persistent.cabal
pricing/: Makefile  learn-pricing.cabal  pricing.hs
process-isolation/: Main.hs  README.md  package.yaml  stack.yaml
raft/: Raft.hs  raft.cabal
record/: Main.hs  default.nix  shell.nix
record-test/: record-test.cabal
rspkg/rust-guessing-game/: Cargo.toml
rspkg/rust-hello-world/: Cargo.toml
smash/: .gitignore  stack.yaml
smash/pkg/hiccup/: package.yaml
smash/pkg/hiccup/src/: Core.hs  Hiccup.hs  HiccupRepl.hs  ProcArgs.hs  TclLib.hs  TclObj.hs  VarName.hs
smash/pkg/hiccup/src/TclLib/: ArrayProcs.hs
sorting/hs/: LICENSE  bubble-sort.cabal
sorting/hs/src/Data/Vector/: BubbleSort.hs
stack-scripts/: HelloWorld.hs
stack-templates/: classy-script.hsfiles
toys/chat/: index.html
try-alex/: .gitignore  package.yaml
try-alex/app/: CatLines.hs
try-alex/lib/TryAlex/: LexComments.x
try-lens/: README.md  package.yaml  stack.yaml
try-lens/app/: A.hs
utk/cs302/lab1/c/: ppm-copy.cpp  ppm-crop.cpp  ppm-prim.cpp  ppm-prim.h  ppm-rotate.cpp
utk/cs302/lab1/cpp/: Makefile  ppm-copy.cpp  ppm-prim.h
utk/cs302/lab2/cpp/: Makefile  README  album.cpp  lab2.h  track.cpp
utk/cs302/lab2/scm/: artist.scm  lab2.scm  read-lines.scm
utk/cs302/lab3/cpp/: makefile  prod_tester.cpp
utk/cs302/lab4/cpp/: light.cpp  makefile  roadtest.cpp
utk/cs302/lab5/cpp/: lab5.h  simulation.cpp  utils.cpp
utk/cs302/lab6/cpp/: sort.h
utk/cs302/lab7/cpp/: Makefile  io.cpp  lab7.h  main.cpp
utk/cs302/lab7/cpp_imperitive/: main.cpp
utk/cs302/lab8/cpp/: #graph.cpp#
utk/cs302/lab8/py/: lab8.py
utk/cs302/lab9/cpp/: #dijsdtra.cpp#  city_map_base.cpp
utk/cs302/labA/cpp/: Makefile  dice.cpp  graph.cpp  graph.hpp  main.cpp  main.hpp
utk/cs302/labA/cpp/test/: W001.txt  words
utk/cs302/labB/cpp/test/: Makefile  bigzigzag.cpp
