name:                algo
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Benjamin Summers
maintainer:          ben@benjaminsummers.net
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      hs
  default-language:    Haskell2010
  exposed-modules:     Data.Vector.BubbleSort
  exposed-modules:     Data.Vector.InsertionSort
  build-depends:       base >=4.7 && <4.8
                     , vector
                     , primitive
                     , monad-loops
                     , QuickCheck
