name:                db
version:             0.1.0.0
license-file:        LICENSE
author:              Benjamin Summers
maintainer:          ben@benjaminsummers.net
build-type:          Simple
cabal-version:       >=1.10

executable db
  main-is:             Sql.hs
  build-depends:       base >=4.7 && <4.8, postgres-simple
  default-language:    Haskell2010
