name:                hsgl
version:             0.1.0.0
license:             AllRightsReserved
license-file:        LICENSE
author:              Benjamin Summers
maintainer:          ben@benjaminsummers.net
build-type:          Simple
cabal-version:       >=1.10

executable hsgl
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base                 >= 4.7 && < 4.9,
                       base-unicode-symbols,
                       transformers,
                       vector,
                       text,
                       gl,
                       GLFW-b,
                       linear,
                       distributive,
                       lens,
                       JuicyPixels
