name:                hello
version:             0.1.0.0
synopsis:            Hello World with Nix
license:             AllRightsReserved
author:              Benjamin Summers
maintainer:          ben@benjaminsummers.net
category:            Exercise
build-type:          Simple
cabal-version:       >=1.10

executable hello
  main-is:          Main.hs
  build-depends:    base >=4.7 && <4.8
  default-language: Haskell2010
