name:                hello
version:             0.1.0.0
synopsis:            Hello World with Nix
license:             MIT
license-file:        LICENSE
author:              Benjamin Summers
maintainer:          ben@benjaminsummers.net
category:            Learning Exercise
build-type:          Simple
cabal-version:       >=1.20

executable hello
  main-is:          Main.hs
  build-depends:    base >=4.7 && <4.8
  default-language: Haskell2010
