name:                learn-opaleye
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Benjamin Summers
maintainer:          ben@benjaminsummers.net
category:            Learning Exercise
build-type:          Simple
cabal-version:       >=1.10

executable learn-opaleye
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8
               ,       contravariant
               ,       old-locale
               ,       opaleye
               ,       postgresql-simple
               ,       pretty
               ,       product-profunctors
               ,       profunctors
               ,       semigroups
               ,       text
               ,       time
               ,       transformers
               ,       uuid

  hs-source-dirs:      src
  default-language:    Haskell2010
