name:                learn-persistent
version:             0.1.0.0
synopsis:            Teaching myself how to use persistent
license:             PublicDomain
author:              Benjamin Summers
maintainer:          ben@benjaminsummers.net
category:            Tutorial
build-type:          Simple
cabal-version:       >=1.10

executable learn-persistent
  main-is:             Main.hs
  ghc-options:         -O3 -static -optl-static -optl-pthread
  build-depends:       base >=4.7 && <4.8, persistent, persistent-postgresql,
                       transformers, persistent-template, time, base-unicode-symbols
  default-language:    Haskell2010
