name:                learn-pricing
version:             0.1.0.0
license-file:        LICENSE
author:              Benjamin Summers
maintainer:          ben@benjaminsummers.net
build-type:          Simple
cabal-version:       >=1.10

executable learn-pricing
  main-is:             pricing.hs
  ghc-options:         -O2 -fllvm
  build-depends:       base >=4.7 && <4.8, vector, gnuplot, base-unicode-symbols
  default-language:    Haskell2010
