name:          raft
version:       0.1.0.0
license:       GPL-3
license-file:  LICENSE
author:        Benjamin Summers
maintainer:    ben@benjaminsummers.net
build-type:    Simple
cabal-version: >=1.10

library
  default-language: Haskell2010
  exposed-modules: Raft
  ghc-options:      -Wall -O2
  build-depends:    base >=4.7 && <=4.10,
                    base-unicode-symbols,
                    binary,
                    binary-generic==0.2.1,
                    containers,
                    distributed-process,
                    distributed-process-simplelocalnet,
                    distributed-static,
                    github,
                    network,
                    template-haskell,
                    vector,
                    vector-binary-instances
