name:                record-test
version:             0.1.0.0
synopsis:            Testing out the ‘record’ library.
license:             MIT
license-file:        LICENSE
author:              Benjamin Summers
maintainer:          ben@benjaminsummers.net
category:            Learning Exercise
build-type:          Simple
cabal-version:       >=1.20

executable record-test
  main-is:          Main.hs
  build-depends:    base >=4.7 && <4.8, record, lens
  default-language: Haskell2010
